<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/client_header">
        <EditTextPreference
            android:singleLine="true"
            app:key="client_server"
            app:title="@string/client_server_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:singleLine="true"
            app:key="client_username"
            app:title="@string/client_username_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:singleLine="true"
            app:key="client_password"
            app:title="@string/client_password_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="client_proxy_all"
            app:title="@string/client_proxy_all" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/dns_header">
        <ListPreference
            app:defaultValue="dot"
            app:entries="@array/dns_types_entries"
            app:entryValues="@array/dns_types_values"
            app:key="dns_type"
            app:title="@string/dns_type_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:singleLine="true"
            app:key="dns_server"
            app:title="@string/dns_server_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:singleLine="true"
            app:key="dns_addr"
            app:title="@string/dns_addr_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/log_header">
        <ListPreference
            app:defaultValue="trace"
            app:entries="@array/log_level_entries"
            app:entryValues="@array/log_level_values"
            app:key="log_level"
            app:title="@string/log_level_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>